small resume update

--- a/theme/templates/resume.html
+++ b/theme/templates/resume.html
@@ -148,7 +148,7 @@ ul.leaders li.title-item:before {
     <div style="display:flex; flex-direction: column; text-align: right;">
       <div>mr.adamcox@gmail.com</div>
       <div>mradamcox.github.io</div>
-      <span style="font-style:italic; font-size: .95em;">March 2025</span>
+      <span style="font-style:italic; font-size: .95em;">November 2025</span>
     </div>
      </div>
     <!-- <div class="statement">
@@ -177,11 +177,12 @@ ul.leaders li.title-item:before {
               </div>
               <div class="section-content">
                   <ul class="key-skills-list">
-                      <li>Open source software</li>
+                      <!-- <li>Open source software</li> -->
+                      <li>GIS instruction & core concepts</li>
                       <li>Geopatial data infrastructure</li>
-                      <li>Historical maps and archives</li>
-                      <li>Cultural heritage crowdsourcing</li>
                       <li>Improving access to public data</li>
+                      <li>Cultural heritage crowdsourcing</li>
+                      <li>Historical maps</li>
                   </ul>
               </div>
           </div>
@@ -191,15 +192,15 @@ ul.leaders li.title-item:before {
             </div>
             <div class="section-content">
                 <ul class="key-skills-list">
+                  <li>NolaDevs, local programming interest group</li>
                     <li>IIIF-Maps group</li>
                     <li>GeoBlacklight</li>
                     <li>Arches Forum</li>
                     <li>The Spatial Community (Slack)</li>
                     <li>NACIS (member)</li>
-                    <li>Front-end Party (local web dev group)</li>
-                </ul>
-            </div>
-        </div>
+                  </ul>
+                </div>
+              </div>
       </div>
       <div style="display:flex; flex-direction: column; padding-left: 15px; flex-grow:1;">
         <div class="section" style="width: 100%">
@@ -222,17 +223,19 @@ ul.leaders li.title-item:before {
           </div>
           <div class="section-content">
             <ul class="leaders" style="margin-bottom: 5px;">
-              <li class="title-item"><span>Healthy Regions & Policies Lab, UIUC &ndash; Sr Research Software Engineer</span><span>2023&ndash;present</span></li>
-              <li class="subitem arrow">Web admin/engineer for public health data projects, e.g. SDOH & Place Project (sdohplace.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
-              <li class="subitem arrow">Manage multiple GitHub repositories, plus AWS, Google BigQuery, and Mapbox accounts</li>
-              <li class="subitem arrow">Provide students and interns with technical guidance and spatial data support</li>
+              <li class="title-item"><span>Healthy Regions & Policies Lab, UIUC &ndash; Sr Research Software Engineer</span><span>2023&ndash;2025</span></li>
+              <li class="subitem arrow">Lead engineer for public health data projects, e.g. SDOH & Place Project (sdohplace.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
+              <li class="subitem arrow">Create instructional materials and led sessions on GIS fundamentals for Community Toolkit</li>
+              <li class="subitem arrow">Mentor students and interns providing technical guidance and spatial data support</li>
+              <li class="subitem arrow">Manage GitHub organiations, AWS, Google BigQuery, Netlify, and Mapbox accounts</li>
             </ul>
             <ul class="leaders" style="margin-bottom: 5px;">
               <li class="title-item"><span>Legion GIS &ndash; Owner / Geospatial Developer</span><span>2016 - present</span></li>
               <li class="subitem arrow">40+ GIS projects for 20+ clients, in U.S. and abroad (both public and private sector)
               <li class="subitem arrow">Planned and carried out 15+ Arches cultural heritage inventory implementations &ndash; ETL support, create custom extensions, e.g. Heritage Monitoring Scouts &ndash; hms.fpan.us</li>
               <li class="subitem arrow">Managed multiple Linux servers to host GIS web applications and spatial layers</li>
-              <li class="subitem arrow">Core contributor and maintainer for Arches documentation &ndash; arches.readthedocs.io</li>
+              <!-- <li class="subitem arrow">Core contributor and maintainer for Arches documentation &ndash; arches.readthedocs.io</li> -->
+              <li class="subitem arrow">Designed and taught community course, Intro to QGIS</li>
             </ul>
             <ul class="leaders">
               <li class="title-item"><span>National Park Service &ndash; GIS Specialist</span><span>2012 - 2015</span></li>
@@ -279,7 +282,7 @@ ul.leaders li.title-item:before {
             <li class="subitem">Extending GeoNode to Support Historical Map Georeferencing</li>
             <li class="title-item"><span>QGIS North America &ndash; 2020 &ndash; online</span><span>Presenter</span></li>
             <li class="subitem">QGIS and GIMP for Enhancing Historical Maps</li>
-            <li class="title-item"><span>AAG Annual Meeting &ndash; 2019 (Washington, D.C.) &ndash; 2018 (New Orleans, La.) </span><span>Attendee</span></li>
+            <!-- <li class="title-item"><span>AAG Annual Meeting &ndash; 2019 (Washington, D.C.) &ndash; 2018 (New Orleans, La.) </span><span>Attendee</span></li> -->
             <li class="title-item"><span>Liverpool John Moores University &ndash; 2017 &ndash; Liverpool, U.K.</span><span>Tech Support</span></li>
             <li class="subitem">Arches Training and Workshop</li>
             <!-- <li class="title-item"><span>FOSS4G International Conference &ndash; 2017 &ndash; Boston</span><span>Attendee</span></li> -->
@@ -294,6 +297,12 @@ ul.leaders li.title-item:before {
           Technical Capabilities
         </div>
         <div class="section-content">
+          <div class="tech-skills-subheader">Geospatial Software</div>
+          <div class="subitem">
+              <div>
+                  QGIS &middot; ArcGIS Pro & ArcGIS Online &middot; PostGIS &middot; Geoserver &middot; GRASS &middot; ENVI
+              </div>
+          </div>
             <div class="tech-skills-subheader">Front-end Web Development</div>
             <div class="subitem">
                 <div>
@@ -306,22 +315,16 @@ ul.leaders li.title-item:before {
                   Python &middot; Django &middot; PostgreSQL &middot; GDAL &middot; git + Github &middot; Linux &middot; bash &middot; AWS &middot; Linode &middot; GeoBlacklight &middot; Solr
                 </div>
             </div>
-            <div class="tech-skills-subheader">Geospatial Software</div>
-            <div class="subitem">
-                <div>
-                    QGIS &middot; PostGIS &middot; Geoserver &middot; TiTiler &middot; GRASS &middot; ENVI
-                </div>
-            </div>
-            <div class="tech-skills-subheader">General Software</div>
+            <!-- <div class="tech-skills-subheader">General Software</div>
             <div class="subitem">
                 <div>
                      GIMP &middot; Inkscape &middot; Zotero &middot; Adode CS &middot; Tableau &middot; Archives Space
                 </div>
-            </div>
+            </div> -->
             <div class="tech-skills-subheader">Standards + Specs</div>
             <div class="subitem">
                 <div>
-                    JSON/GeoJSON &middot; GeoTiff/COG &middot; LAS &middot; WMS/WMTS &middot; IIIF &middot; STAC
+                    SHP &middot; JSON/GeoJSON &middot; GeoTiff/COG &middot; LAS &middot; WMS/WMTS &middot; IIIF &middot; STAC
                 </div>
             </div>
         </div>
